Fix: Change day button text color to black for better visibility on gold background

--- a/css/style.css
+++ b/css/style.css
@@ -1384,7 +1384,7 @@ header.fixed .menuBar .navbar-right {
   border: 0;
   background-color: transparent;
   font-size: 16px;
-  color: #FFFFFF;
+  color: #000000;
   font-weight: 700;
   font-style: italic;
   text-transform: uppercase;
@@ -1393,8 +1393,9 @@ header.fixed .menuBar .navbar-right {
 }
 
 .button-group .button.is-checked {
-  color: #fff;
+  color: #000000;
   z-index: 1;
+  font-weight: 900;
 }
 
 .button-group .button span {
